correction responsive gap between hebergement and most popular

--- a/css/responsive-desktop1080p.css
+++ b/css/responsive-desktop1080p.css
@@ -5,7 +5,7 @@
 
 
 .mid-page {
-gap: 10px;
+gap: 4vw;
 }
 
 /* **** decrease padding in hotel cards container*/
