--- a/css/responsive-laptop.css
+++ b/css/responsive-laptop.css
@@ -9,7 +9,7 @@
 /* ******div mid-page ****** */
 
 .mid-page {
-    gap: 10px;
+    gap: 4vw;
     }
     
     /* **** decrease padding in hotel cards container*/
