--- a/css/responsive-tablet.css
+++ b/css/responsive-tablet.css
@@ -23,6 +23,7 @@
 .flex-banner__nav {
   width: 100%;
   height: 5vh;
+  font-size: 130%;
 }
 
 .flex-banner__nav__list a {
@@ -42,7 +43,7 @@
 .section1 {
   width: 90%;
   margin: auto;
-  margin-top: 3.5vh;
+  margin-top: 5vh;
   text-align: center;
   gap: 20px;
   margin-bottom: 0px;
